# Offline-repository-plugin-store

./: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js
.github/workflows/: build-tauri-windows.yml  release-tauri.yml
src/: app.js  index.html  styles.css  tauri-bridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tauri-app/: README-TAURI-SETUP.md
tauri-app/src/: styles.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
