[package]
name = "otzaria-plugins-store"
version = "1.0.5"
description = "חנות תוספים לאוצריא - גרסה אופליין למחשב (Windows)"
authors = ["Otzaria"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
zip = "2"
dirs = "5"
chrono = "0.4"
urlencoding = "2.1"

[profile.release]
# מקטין משמעותית את גודל קובץ ה-exe הסופי (זה כל הטעם ברילוקיישן ל-Tauri)
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
